Mapping controller with users' use case
