# build/swagger.json
@@ -80,6 +80,33 @@
 			},
 			"PostBookInputDto": {
 				"$ref": "#/components/schemas/ReturnType_typeofPostBookInputDto.parse_"
+			},
+			"ReturnType_typeofPostUserOutputDto.parse_": {
+				"properties": {
+					"accessToken": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"PostUserOutputDto": {
+				"$ref": "#/components/schemas/ReturnType_typeofPostUserOutputDto.parse_"
+			},
+			"ReturnType_typeofPostUserInputDto.parse_": {
+				"properties": {
+					"password": {
+						"type": "string"
+					},
+					"login": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"description": "Obtain the return type of a function type"
+			},
+			"PostUserInputDto": {
+				"$ref": "#/components/schemas/ReturnType_typeofPostUserInputDto.parse_"
 			}
 		},
 		"securitySchemes": {}
@@ -193,6 +220,70 @@
 						}
 					}
 				]
+			}
+		},
+		"/users/signup": {
+			"post": {
+				"operationId": "Signup",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/PostUserOutputDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/PostUserInputDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/users/signin": {
+			"post": {
+				"operationId": "Signin",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/PostUserOutputDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/PostUserInputDto"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
